	password and server are filled in. Pass username, password and server
	on to the register dialog. Go back to login dialog when canceling
	registration. Fixed a crash caused by deleting an OkDialog twice (it
	also deletes itself). Made the register dialog a bit wider. Register
	dialog no longer clears username field when it is invalid.

2007-03-21  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp, src/gui/viewport.cpp, src/resources/image.h,
	src/resources/image.cpp: Reduced amount of useless logging, calculate
	nearest power of two in a function and only do the alpha check in
	software mode.
	* src/gui/login.cpp: Fixed small issue where default server didn't fit
	in the server entry field properly.
	* src/main.cpp: Display a progress bar and connecting status for each
	server and display the version using a gcn::Label.
	* src/gui/viewport.cpp, src/monster.h: Avoiding magic numbers where
	possible (1002) and also display the target when other players are
	targeted.
	* src/floor_item.cpp, src/being.cpp, src/main.cpp, src/CMakeLists.txt,
	src/gui/equipmentwindow.cpp, src/gui/viewport.cpp,
	src/gui/itemcontainer.cpp, src/gui/viewport.h, src/engine.cpp,
	src/animatedsprite.cpp, src/tileset.h, src/npc.cpp, src/Makefile.am,
	src/being.h, src/resources/imageset.cpp, src/resources/animation.h,
	src/resources/spritedef.cpp, src/resources/resourcemanager.h,
	src/resources/spriteset.h, src/resources/imageset.h,
	src/resources/resourcemanager.cpp, src/resources/spriteset.cpp,
	src/resources/spritedef.h: Renamed Spriteset to ImageSet.

2007-03-20  David Athay  <ko2fan@gmail.com>

	* src/gui/viewport.cpp: Fixed target cursor animation, and changed
	which layer it is drawn after.
	* src/gui/viewport.cpp, src/gui/viewport.h: Split drawing the target
	cursor and target name into functions.

2007-03-20  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/gui/mouse.png: Positioned the cursor image more
	accurate.

2007-03-19  David Athay <ko2fan@gmail.com>
